# terraform-workflow

./: .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: buid.yml  create_ecr.yml  terraform_workflow.yml
src/: logger.py  main.py  models.py
src/router/: healthcheck.py  setup.py
terraform/: api-gateway.tf  api_gateway.tf  backend.tf  cloudwatch.tf  dynamodb.tf  ecr.tf  iam.tf  lambda.tf  main.tf  plan.out  s3.tf  setup.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
