[tool.poetry]
name = "dynamodb"
version = "0.1.0"
description = ""
authors = ["Vitor <vitorvxroma@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.140"
requests = "^2.31.0"
pydantic = "^2.5.2"
dynaconf = "^3.2.4"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
mangum = "^0.17.0"
aws-lambda-powertools = "^2.43.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
